# colophon

./: Cargo.toml  README.md  flake.nix  prov.yaml
.github/workflows/: ci.yml  homebrew.yml  publish.yml
ci/: check-getting-started.sh
colophon/: Cargo.toml
colophon-cli/: Cargo.toml
colophon-cli/src/: cli.rs  init.rs  main.rs
colophon-cli/tests/: smoke.rs  targets.rs
colophon/src/: attach.rs  change.rs  config.rs  content.rs  discovery.rs  document.rs  edit.rs  error.rs  exec.rs  fixity.rs  fs.rs  identity.rs  index.rs  intake.rs  journal.rs  lib.rs  link.rs  meta.rs  mutate.rs  relation.rs  route.rs  tree.rs  validate.rs  workspace.rs
colophon/tests/: public_api.rs
docs/: DESIGN.md  config-vocab.md  getting-started.md  init-adoption.md  next-steps.md  reference-styles.md  spec.md
prov/: Cargo.toml
prov-cli/: Cargo.toml
prov-cli/src/: cli.rs  init.rs  main.rs
prov-cli/tests/: config_home.rs  new_idempotent.rs  output_streams.rs  root_flag.rs  smoke.rs  targets.rs
prov/src/: attach.rs  change.rs  config.rs  content.rs  discovery.rs  document.rs  edit.rs  error.rs  exec.rs  fixity.rs  fs.rs  identity.rs  index.rs  intake.rs  journal.rs  lib.rs  link.rs  meta.rs  mutate.rs  relation.rs  route.rs  textdist.rs  title.rs  tree.rs  validate.rs  vocabulary.rs  workspace.rs
prov/src/fs/: memory.rs
prov/tests/: public_api.rs
vault/: index.md  prov.yaml
