[package]
name = "colophon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
description = "A self-describing plaintext workspace: structure lives in documents' own embedded metadata."
keywords = ["markdown", "frontmatter", "workspace", "knowledge-base"]
categories = ["text-processing", "filesystem"]
# Not published yet — stabilizing the public API first.
publish = false

[dependencies]
# Embedded-metadata backend. fig is a Zig-backed parser/editor (its build.rs
# runs `zig build`). The value tree is colophon's common currency; a serde
# backend and non-YAML embedded formats will move behind features later.
fig.workspace = true
indexmap.workspace = true
thiserror.workspace = true
